# dashboard

./: .clang_complete  LICENSE  meson.build  meson_options.txt  notes.md  todo.md
include/: audio.h  banner.h  brightness.h  display.h  music.h  notes.h  power.h  ui.h
src/: audio_alsa.c  audio_dummy.c  audio_pulse.c  battery.c  brightness.c  daemon.c  dashboard.c  display.c  draw.c  dui_msg.c  inotify.c  mpd.c  music_dummy.c  music_mpd.c  music_playerctl.c  notes.c  playerctl.c  power.c  shared.h  ui.c  utf8.c  volume.c
src/wl/: display.c  meson.build  pool-buffer.c  pool-buffer.h
src/x11/: display.c  meson.build
subprojects/: pml.wrap
