option('with-notes', type: 'feature', value: 'auto', description: 'support for notes module')
option('with-x11', type: 'feature', value: 'auto', description: 'support for x11 display backend')
option('with-wl', type: 'feature', value: 'auto', description: 'support for wayland display backend')

option('impl-music',
	type: 'combo',
	choices: ['playerctl', 'mpd', 'dummy'],
	value: 'playerctl',
	description: 'Which music module implementation to use (static)')

option('impl-audio',
	type: 'combo',
	choices: ['pulse', 'alsa', 'dummy'],
	value: 'alsa',
	description: 'Which audio module implementation to use (static)')
